--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
   border: 2px solid #252525;
   box-sizing: border-box;
   text-align: right;
-  padding: 10px;
+  padding: 15px 10px;
   overflow: hidden;
 }
 
@@ -31,7 +31,7 @@ body{
 }
 li{
   border: 2px solid #252525;
-  padding: 8px;
+  padding: 20px 4px;
   text-align: center;
   cursor: pointer;
   transition: .4s;
@@ -57,4 +57,8 @@ li:hover{
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555; 
+}
+
+.equal{
+  background-color: #3D8BFD;
 }
